[package]
name = "wasmchat"
version = "0.1.0"
authors = ["Sage Mitchell <dev@mx00s.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.9"
strum_macros = "0.9"
serde = "1"
serde_json = "1"
serde_derive = "1"
stdweb = "0.4.8"
wasm-bindgen = "0.2.67"
web_logger = "0.2.0"
yew = "0.17.4"
